Implementação da documentação das rotas de Usuario
